# sql-mock

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTION.md  LICENCE.md  Makefile  README.md  compose.yaml  conftest.py  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md  release_template.md
.github/workflows/: publish-to-pypi.yml  python-package.yml  test-package.yml
docs/: .buildinfo  bigquery.md  clickhouse.md  dbt.md  default_values.md  defining_table_mocks.md  faq.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  redshift.md  result_assertion.md  robots.html  search.html  searchindex.js  sitemap.xml  snowflake.md  sql_mock.bigquery.html  sql_mock.clickhouse.html  sql_mock.html  sql_mock.redshift.html  sql_mock.snowflake.html  your_sql_query_to_test.md
docs/_sources/: faq.md.txt  index.rst.txt  modules.rst.txt  sql_mock.redshift.rst.txt  sql_mock.snowflake.rst.txt
docs/_sources/getting_started/: installation.md.txt
docs/_sources/usage/: dbt.md.txt  default_values.md.txt  defining_table_mocks.md.txt  your_sql_query_to_test.md.txt
docs/_sources/usage/bigquery/: index.rst.txt
docs/_sources/usage/clickhouse/: settings.md.txt
docs/_sources/usage/redshift/: examples.md.txt  index.rst.txt
docs/_sources/usage/snowflake/: examples.md.txt  index.rst.txt  settings.md.txt
docs/getting_started/: installation.html  quickstart.html
docs/usage/: dbt.html  default_values.html  defining_table_mocks.html  examples.html  result_assertion.html  your_sql_query_to_test.html
docs/usage/bigquery/: examples.html  index.html  settings.html
docs/usage/clickhouse/: examples.html  index.html  settings.html
docs/usage/redshift/: examples.html  index.html  settings.html
docs/usage/snowflake/: examples.html  index.html  settings.html
docsource/: conf.py  faq.md  index.rst  robots.txt  sql_mock.bigquery.rst  sql_mock.clickhouse.rst  sql_mock.rst
docsource/getting_started/: installation.md  quickstart.md
docsource/usage/: dbt.md  default_values.md  defining_table_mocks.md  examples.md  result_assertion.md
docsource/usage/bigquery/: examples.md  settings.md
docsource/usage/clickhouse/: examples.md  index.rst  settings.md
docsource/usage/redshift/: examples.md  settings.md
docsource/usage/snowflake/: examples.md
examples/: test_query.sql
examples/bigquery/: test_example.py
examples/clickhouse/: test_example.py
examples/dbt/: test_example.py
examples/redshift/: test_example.py
examples/snowflake/: test_example.py
src/sql_mock/: __init__.py  column_mocks.py  config.py  constants.py  dbt.py  helpers.py  table_mocks.py
src/sql_mock/bigquery/: README.md  column_mocks.py  settings.py  table_mocks.py
src/sql_mock/clickhouse/: README.md  column_mocks.py  settings.py  table_mocks.py
src/sql_mock/redshift/: column_mocks.py  settings.py  table_mocks.py
src/sql_mock/snowflake/: column_mocks.py  settings.py  table_mocks.py
tests/data_geeks/: models.py  query_v1.sql  query_v1_fixed.sql  query_v2.sql  query_v2_fixed.sql  test_case_v1.py  test_case_v2.py
tests/resources/dbt/: dbt_manifest.json  dbt_project.yml
tests/resources/dbt/dbt_target/: manifest.json
tests/sql_mock/: test_column_mocks.py  test_dbt.py  test_helpers.py  test_table_meta.py  test_table_mocks.py
tests/sql_mock/bigquery/: test_column_mocks.py  test_table_mocks.py
tests/sql_mock/clickhouse/: test_column_mocks.py  test_query_execution.py  test_table_mocks.py
tests/sql_mock/redshift/: test_column_mocks.py  test_table_mocks.py
tests/sql_mock/snowflake/: test_column_mocks.py  test_table_mocks.py
tests/test_table_mocks/: test_assert_equal.py  test_generate_query.py
(+2 files in other folders)
