
[tool.poetry]
name = "sql_mock"
version = "0.2.0"
description = ""
readme = "README.md"
authors = ["DAP <thomas.heinz.schmidt@gmail.com>"]
packages = [
    { include = "sql_mock", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.2"
pydantic-settings = "^2.0.3"

# Clickhouse specific 
clickhouse-driver = {extras = ["numpy"], version = "^0.2.6"}

# Google Bigquery specific
google-cloud-bigquery = "^3.11.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-mock = "^3.11.1"
pytest-icdiff = "^0.8"
pre-commit = "^3.5.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Ignore Google Bigquery namespace deprecation warnings
[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources\\.declare_namespace\\('.*'\\):DeprecationWarning",
    "ignore::DeprecationWarning:google.rpc",
]
