
[tool.poetry]
name = "sql-mock"
version = "0.6.0"
description = "Simplify the testing of SQL data models and queries by allowing users to mock input data and create tests for various scenarios. It provides a consistent and convenient way to test the execution of your query without the need to process a massive amount of data."
repository = "https://github.com/DeepLcom/sql-mock"
readme = "README.md"
authors = ["DeepL SE", "Thomas Schmidt <thomas.heinz.schmidt@gmail.com>"]
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]

packages = [
    { include = "sql_mock", from = "src" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/DeepLcom/sql-mock/issues"
"Changelog" = "https://github.com/DeepLcom/sql-mock/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.2"
pydantic-settings = "^2.0.3"
sqlglot = "^20.5.0"
pyyaml = "^6.0.1"

# Clickhouse specific
clickhouse-connect = {version = "^0.7.0", optional = true}

# Google Bigquery specific
google-cloud-bigquery = {version ="^3.11.4", optional = true}

# Redshift specific
boto3 = "1.34.14" # Pin version to resolve dependencies faster
redshift-connector = "^2.0.918"

# Snowflake specific
snowflake-connector-python = "^3.6.0"

[tool.poetry.extras]
bigquery = ["google-cloud-bigquery"]
clickhouse = ["clickhouse-connect"]
redshift = ["redshift-connector", "boto3"]
snowflake = ["snowflake-connector-python"]

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-mock = "^3.11.1"
pytest-icdiff = "^0.8"
pre-commit = "^3.5.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Ignore Google Bigquery namespace deprecation warnings
[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources\\.declare_namespace\\('.*'\\):DeprecationWarning",
    "ignore::DeprecationWarning:google.rpc",
]
